3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

Swamps don't affect DMs anymore. Also, swamps don't remove items with
FLAG_IS_FLOOR or FLAG_IS_OVERLAY_FLOOR.
 server/swamp.c
----
Fixes to plugin system. Added "SINT16" as return type.
 server/plugins.c: resistances are sint16, not int.
 plugins/cfanim/include/cfanim_proto.h: fix cf_object_get_resistance declaration.
 plugins/cfpython/cfpython_archetype.c: fix comparison function, which should return 0 or +-1.
 plugins/cfpython/cfpython_map.c: fix comparison function.
 plugins/cfpython/cfpython_object.c: fix broken GetResist, fix comparison function.
 plugins/cfpython/cfpython_party.c: fix comparison function.
 plugins/cfpython/cfpython_region.c: fix comparison function.
 plugins/common/plugin_common.c: object resistances are sint16.
 plugins/common/include/plugin_common.h: object resistances are sint16.
Ryo 2006-02-14

Apply modified patch #1428048 (make the log line buffered) by Marc Lehmann.
---
common/init.c: In init_globals() switch the log file to line buffer mode.
Andreas Kirschbaum 2006-02-11

server/apply.c: In apply_scroll() do not identify the scroll if the player
   lacks the literacy skill.
Andreas Kirschbaum 2006-02-10

Apply slightly modified patch #1428309 (code-cleanup: const, static) by
Stefan Huehner: add const/static to functions/variables. Remove some type
casts.
---
Affected files: common/{arch.c,glue.c,image.c,init.c,readable.c,time.c},
crossedit/stubs.c
include/{attack.h,libproto.h,object.h,sockproto.h,spells.h,sproto.h},
random_maps/{door.c,rproto.h,standalone.c,style.c},
server/{alchemy.c,apply.c,c_chat.c,c_misc.c,init.c,player.c,shop.c,spell_effect.c},
socket/{info.c,loop.c,request.c}